--- a/examples/fit_trdm.ipynb
+++ b/examples/fit_trdm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,15 +84,15 @@
     "alpha = jnp.array([1, 1, 1])\n",
     "sigma = jnp.array([.5, .5, .5])\n",
     "t0 = 0\n",
-    "trdm = TRDM(v, alpha, sigma, t0)\n",
-    "choice_RTs = trdm.sample(data_key, (500,), rel_max_time=10.)\n",
+    "trdm = TRDM(v, alpha, sigma, t0, rel_max_time=10.0)\n",
+    "choice_RTs = trdm.sample(data_key, (500,))\n",
     "\n",
     "plot_trdm(choice_RTs, trdm, max_RT=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 825.90it/s, init loss: 1624.7655, avg. loss [951-1000]: 764.7015]\n"
+      "100%|██████████| 1000/1000 [00:01<00:00, 924.85it/s, init loss: 1624.7655, avg. loss [951-1000]: 764.7015]\n"
      ]
     },
     {
@@ -129,7 +129,7 @@
        "Text(0.5, 1.0, 'best fit params vs. real data')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "Text(0.5, 1.0, 'actual')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 1000/1000 [00:05<00:00, 169.40it/s, 15 steps of size 2.98e-01. acc. prob=0.91]\n"
+      "sample: 100%|██████████| 1000/1000 [00:05<00:00, 175.19it/s, 15 steps of size 2.98e-01. acc. prob=0.91]\n"
      ]
     },
     {
@@ -235,7 +235,7 @@
        "Text(0.5, 1.0, 'best fit params vs. real data')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "Text(0.5, 1.0, 'actual')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
