--- a/examples/fit_wfpt.ipynb
+++ b/examples/fit_wfpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +78,15 @@
    "source": [
     "# synthesize choice_RT data\n",
     "data_key, map_key, mcmc_key = random.split(random.PRNGKey(0), 3)\n",
-    "wfpt = WFPT(.04, 2.2, .3, .2)\n",
-    "choice_RTs = wfpt.sample(data_key, (1000,), dt=.001)\n",
+    "wfpt = WFPT(.04, 2.2, .3, .2, dt=.001)\n",
+    "choice_RTs = wfpt.sample(data_key, (1000,))\n",
     "\n",
     "plot_wfpt(choice_RTs, wfpt, max_RT=10.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 766.27it/s, init loss: 1562.4436, avg. loss [951-1000]: 1483.5950]\n"
+      "100%|██████████| 1000/1000 [00:01<00:00, 831.91it/s, init loss: 1562.4436, avg. loss [951-1000]: 1483.5950]\n"
      ]
     },
     {
@@ -120,7 +120,7 @@
        "Text(0.5, 1.0, 'best fit params vs. real data')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "Text(0.5, 1.0, 'actual')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 1000/1000 [00:06<00:00, 146.25it/s, 7 steps of size 5.43e-01. acc. prob=0.91]\n"
+      "sample: 100%|██████████| 1000/1000 [00:06<00:00, 150.02it/s, 7 steps of size 5.43e-01. acc. prob=0.91]\n"
      ]
     },
     {
@@ -231,7 +231,7 @@
        "Text(0.5, 1.0, 'best fit params vs. real data')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "Text(0.5, 1.0, 'actual')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
